pages/filters.module.scss
.filters {
  background-color: #f3f4f6;
  padding-top: 4rem;
  .hero-bg {
    height: 28rem;
    width: 100%;
    position: relative;
    @media (max-width: 768px) {
      height: 25rem;
    }

    .hero-image {
      background-image: url("/images/Rectangle-3040.png");
      background-position: center center;
      align-self: flex-end;
      background-size: cover;
      height: 25rem;
      width: 65%;
    }
    .hero-text {
      position: absolute;
      width: 50%;
      background: #fafafa;
      left: 5rem;
      top: 3.5rem;
      padding: 2rem;
      border-radius: 0.8rem;
      opacity: 0.9;

      p:first-of-type {
        font-size: 2.3rem;
        width: 90%;
        color: #1f1f1f;
        vertical-align: top;
        line-height: 3rem;
        margin: 1rem 0;
        font-weight: 400;
        line-height: 45.94px;
      }
      p:nth-child(2) {
        color: #1f1f1f;
        font-weight: 400;
        line-height: 28px;
      }
    }
    .hero-text > ul {
      background: linear-gradient(to right, #f3f3f3 100%, #e3d7d7 0%);
      padding: 0.5rem;
      border: 0.1rem solid #fafafa;
      border-radius: 0.4rem;
      font-weight: 300;
    }
    .occasions-mobile {
      background-image: url("/images/Rectangle-3040-mobile.png");
      height: 20rem;
      background-position: center center;
      background-size: cover;

      .mobile-card {
        p:first-of-type {
          font-size: 1.8rem;
          font-weight: 400;
        }

        position: relative;
        top: 170px;
        width: 90%;
        background-color: white;
        margin: auto;
        padding: 1rem;
        border-radius: 0.8rem;
        font-size: 1rem;
        font-weight: 400;

        p:last-of-type {
          margin-top: 1rem;
          width: 10rem;
          border-bottom: 0.1rem solid;
          font-size: 1.25rem;
        }
      }
      .mobile-card > ul {
        background: linear-gradient(to right, #f3f3f3 100%, #e3d7d7 0%);
        padding: 0.5rem;
        border-radius: 0.4rem;
        border: 0.1rem solid #fafafa;
      }
    }
  }

  .title {
    font-size: 2.5rem;
    font-weight: 400;

    @media (max-width: 768px) {
      font-size: 1.8rem;
    }
  }

  .sub-title {
    font-size: 1.5rem;
    font-weight: 400;
  }

  .content {
    padding: 0 7rem 4rem 7rem;

    @media (max-width: 768px) {
      padding: 3rem 2rem;
    }

    .left-side {
      margin-top: 2rem;

      @media (max-width: 768px) {
        display: none;
      }
    }

    .filters-sidebar {
      border: 0.1rem solid #e7eaed;
      border-radius: 0.3rem;
      padding: 0.8rem;
      min-width: 16rem;
      background-color: #ffffff;

      .btn-view {
        display: block;
        font-weight: 700;
        margin: auto;
        text-decoration: underline;
        color: #b240da;
      }

      .filter-link {
        &:hover {
          text-decoration: underline;
          color: #b240da;
        }

        &.active {
          text-decoration: underline;
          color: #b240da;
        }
      }
    }
    .date {
      border: 0.1rem solid #d1d5db;
      padding: 0.5rem;
      display: inline-flex;
      justify-content: space-between;
      align-items: center;
      margin-left: 0.5rem;
      width: 12rem;

      @media (max-width: 768px) {
        width: 47%;
      }
    }

    .product-wrapper {
      width: 100%;
      .sorts {
        justify-content: end;
        @media (min-width: 768px) {
          margin: 1.8rem 2.5rem 1.8rem 0;
        }
        @media (min-width: 1400px) {
          margin-right: 4rem;
        }
      }
      .sorts-mobile {
        @media (max-width: 768px) {
          margin: 12rem 0 1rem 0;
        }
      }
      .date-wrapper {
        display: flex;
        justify-content: space-between;
        align-items: center;
        width: 100%;

        @media (max-width: 768px) {
          flex-direction: column;
          gap: 1rem;
          align-items: flex-start;
        }
      }

      .sort {
        min-width: 12rem;
        // text-align: left;
        // display: flex;

        @media (max-width: 768px) {
          width: 14rem;
        }
        @media (min-width: 768px) {
          border: 1px solid;
          border-radius: 0.25rem;
          background-color: white;
        }
      }

      .sort > div > svg {
        @media (min-width: 768px) {
          margin: 0.1rem 0;
          display: flex;
          align-items: center;
          justify-content: center;
        }
      }
      .sort > div {
        @media (min-width: 768px) {
          margin: 0.1rem 0;
          display: flex;
          align-items: center;
          justify-content: center;
          border: 0;
        }
      }
      .question {
        min-width: 5rem;
        @media (max-width: 420px) {
          width: auto;
        }
      }
    }

    .products {
      gap: 2rem;
      display: flex;
      justify-content: space-between;
      margin: 0.6rem 0;
      flex-wrap: wrap;
      width: 100%;
      position: relative;
      justify-content: flex-start;
      @media (max-width: 1300px) {
        gap: 1.5rem;
      }
      @media (max-width: 700px) {
        gap: 1rem;
      }
    }

    .arrow {
      transform: rotate(90deg);
    }
  }
  .gifts {
    padding: 0 6rem;
    padding-bottom: 3rem;

    @media (max-width: 768px) {
      padding: 0 2rem;
    }
  }
  .stories {
    margin: 2rem 0 4rem;
    .title {
      margin: 4rem 0 2rem;
    }
  }
}

.see-all {
  width: 17rem;
  margin: 1.5rem auto;

  h3 {
    border-bottom: 0.1rem solid;
    margin-right: 1rem;
  }
}

.spinner {
  display: flex;
  justify-content: center;
  align-items: flex-start;
  width: 100%;
  height: 100%;
  padding-top: 6rem;
  position: absolute;
  top: 0;
  left: 0;
  background-color: rgba(255, 255, 255, 0.95);
  z-index: 10;
  img {
    width: 25rem;
  }
}

.filter-mobile {
  display: none;
  position: relative;
  top: 0.7rem;
  @media (max-width: 768px) {
    display: block;
    margin-right: 0.5rem;
  }

  .btn {
    color: rgba(0, 0, 0, 0.6);
    background-color: white;
    border: 0.1rem solid #e5e7eb;
    padding: 0.5rem;
    display: flex;
    justify-content: space-between;

    & > * {
      margin-right: 5rem;
      @media (max-width: 768px) {
        margin-right: 2rem;
      }
      &:last-child {
        margin-right: 0;
      }
    }
  }
  .btn > h3 {
    font-weight: 400;
    color: #1f1f1f;
  }

  .btn-view {
    text-decoration: underline;
    text-align: center;
    margin: auto;
  }

  .filters-dropdown {
    position: absolute;
    top: 2rem;
    left: -1.5rem;
    width: 100%;
    position: absolute;
    background-color: white;
    padding: 1rem;
    padding-top: 0;
    transition: 0.3s ease-in-out;
    opacity: 0;
    padding-bottom: 1rem;
    z-index: -10;
    min-width: 125%;
    border: 0.063rem solid #f5f5f5;
    box-shadow: 0 0.25rem 1rem rgba(0, 0, 0, 0.2);

    &.active {
      top: 4rem;
      opacity: 1;
      z-index: 8;
    }
  }
}

.about-section {
  display: flex;
  justify-content: space-between;
  & > *:first-child {
    margin-right: 2rem;

    @media (max-width: 768px) {
      margin-right: 0;
    }
  }

  & > * {
    width: 50%;

    @media (max-width: 768px) {
      width: 100%;
      margin: 0;
      margin-top: 1rem;
      &:first-child {
        margin-top: 0;
      }
    }
  }

  @media (max-width: 768px) {
    flex-direction: column;
  }

  .red {
    color: #b240da;
  }
}

.search-wrapper {
  width: 100%;
  border: 0.1rem solid #dadada;
  border-radius: 0.4rem;
  @media (max-width: 768px) {
    width: 50%;
  }
}

.info {
  background-color: #fcf6fd;
  padding: 0.8rem 1.1rem;
  margin-top: 1rem;
}

